--- a/hsi.html
+++ b/hsi.html
@@ -1,4 +1,4 @@
-<TABLE>
+<TABLE BORDER=1>
 <TR><TD><A HREF='
     https://hk.finance.yahoo.com/quote/00001.HK/history?period1=946944000&period2=1643846400&interval=1d&filter=history&frequency=1d&includeAdjustedClose=true'>00001.HK</A></TD></TR>
     <TR><TD><A HREF='
